--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 <plugin id="cordova-plugin-keyboard-controller" version="1.0.0" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
 	<name>KeyboardConstroller</name>
 	<js-module name="KeyboardConstroller" src="www/KeyboardConstroller.js">
-		<clobbers target="window.KeyboardConstroller" />
+		<clobbers target="KeyboardConstroller" />
 	</js-module>
 	<platform name="android">
 		<config-file parent="/*" target="res/xml/config.xml">
