--- a/plugin.xml
+++ b/plugin.xml
@@ -1,16 +1,26 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="UTF-8"?>
 <plugin id="cordova-plugin-keyboard-controller" version="1.0.0" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
-	<name>KeyboardConstroller</name>
+    <name>Keyboard Constroller</name>
+    <description>Cordova plugin to control the native keyboard of Android and iOS.</description>
+    <author>Daelton Dias</author>
+    <license>MIT</license>
+    <keywords>cordova, keyboard, constroller, plugin</keywords>
+    <repo>https://github.com/DaeltonDias/cordova-plugin-keyboard-constroller.git</repo>
+    <issue>https://github.com/DaeltonDias/cordova-plugin-keyboard-constroller/issues</issue>
+    <engines>
+        <engine name="cordova" version=">=3.0.0"/>
+    </engines>
 	<js-module name="KeyboardConstroller" src="www/KeyboardConstroller.js">
-		<clobbers target="cordova.plugins" />
+		<clobbers target="cordova.plugins.KeyboardConstroller" />
+		<clobbers target="KeyboardConstroller" />
 	</js-module>
 	<platform name="android">
 		<config-file parent="/*" target="res/xml/config.xml">
 			<feature name="KeyboardConstroller">
-				<param name="android-package" value="cordova.plugin.keyboard.controller.KeyboardConstroller" />
+				<param name="android-package" value="org.apache.cordova.keyboardconstroller.KeyboardConstroller" />
 			</feature>
 		</config-file>
 		<config-file parent="/*" target="AndroidManifest.xml"></config-file>
-		<source-file src="src/android/KeyboardConstroller.java" target-dir="src/cordova/plugin/keyboard/controller/KeyboardConstroller" />
+		<source-file src="src/android/KeyboardConstroller.java" target-dir="src/org/apache/cordova/keyboardconstroller" />
 	</platform>
 </plugin>
